# axeyum

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  PLAN.md  README.md  STATUS.md  book.toml  deny.toml  justfile
crates/axeyum-aig/: Cargo.toml
crates/axeyum-aig/src/: lib.rs
crates/axeyum-bench/: Cargo.toml
crates/axeyum-bench/examples/: audit_dominance.rs  cnf_core_bench.rs  cnf_stream_bench.rs  curriculum_demo.rs  cvc5_qfbv_timeout_sweep.rs  cvc5_smt_stream_bench.rs  diagnose_evidence.rs  dump_dimacs.rs  explain_corpus.rs  measure_corpus.rs  measure_graduated.rs  pbls_probe.rs  preprocess_timing.rs  probe_selected_evidence_lean.rs  qf_abv_probe.rs  replay_refine_profile.rs  scenario_pipeline_report.rs  scenario_scaling.rs  smtcomp_cli.rs  uf_pair_profile.rs  uflia_online_probe.rs  xor_cdcl_probe.rs
crates/axeyum-bench/src/: certificate_process.rs  main.rs
crates/axeyum-bench/tests/: certificate_process_isolation.rs  qfbv_proof_export.rs
crates/axeyum-bv/: Cargo.toml
crates/axeyum-bv/src/: lib.rs
crates/axeyum-cas/: Cargo.toml
crates/axeyum-cas/examples/: cas_tour.rs  certified_calculus.rs
crates/axeyum-cas/src/: algebraic.rs  approx.rs  assumptions.rs  boolean.rs  combinatorics.rs  factor_int.rs  geometry.rs  gfp.rs  gosper.rs  groebner.rs  hyperbolic.rs  interval_arith.rs  lib.rs  matrix.rs  mvpoly.rs  normalforms.rs  ntheory.rs  ntheory_advanced.rs  ntheory_more.rs  orthopoly.rs  permutation.rs  ratint.rs  series.rs  sets.rs  special.rs  stats.rs  sturm.rs
crates/axeyum-cnf/: Cargo.toml
crates/axeyum-cnf/src/: alethe.rs  bve.rs  compact.rs  drat.rs  gf2.rs  interpolant.rs  lib.rs  lrat.rs  proof_sat.rs  simplify.rs  vivify.rs  xor_cdcl.rs  xor_dpll.rs  xor_drat.rs  xor_extract.rs  xor_matrix.rs  xor_propagate.rs  xor_search.rs
crates/axeyum-cnf/tests/: formula_arena.rs  interpolant.rs  math_resource_boolean_routes.rs  vivify.rs
crates/axeyum-consumer-bench/: Cargo.toml
crates/axeyum-consumer-bench/src/: corpus.rs  harness.rs  lib.rs  oracle.rs  report.rs
crates/axeyum-consumer-bench/tests/: scoreboard.rs
crates/axeyum-egraph/: Cargo.toml
crates/axeyum-egraph/src/: lib.rs
crates/axeyum-evm/: Cargo.toml  README.md
crates/axeyum-evm/examples/: measure_evm.rs
crates/axeyum-evm/src/: concrete.rs  keccak.rs  lib.rs  opcode.rs  reproduce.rs  symbolic.rs  word.rs
crates/axeyum-evm/tests/: blockhash_msize.rs  byte_opcode.rs  call_returndata.rs  calldatacopy_opcode.rs  codecopy_opcode.rs  create_opcode.rs  differential_fuzz.rs  env_opcodes.rs  exp_opcode.rs  generated_repro.rs  log_opcode.rs  multi_tx.rs  phase2_examples.rs  reentrancy.rs  signextend_opcode.rs  warm_array.rs  worked_examples.rs
crates/axeyum-fp/: Cargo.toml
crates/axeyum-fp/src/: lib.rs
crates/axeyum-fp/tests/: fpa2bv_faithfulness.rs  fpa2bv_simple_faithfulness.rs  width_guard.rs
crates/axeyum-ir/: Cargo.toml  README.md
crates/axeyum-ir/src/: arena.rs  bits.rs  error.rs  eval.rs  fmt.rs  lib.rs  poly.rs  poly_big.rs  rational.rs  real_algebraic.rs  sort.rs  stats.rs  term.rs  value.rs  wide.rs
crates/axeyum-ir/tests/: datatypes.rs  ir.rs  real_algebraic_field.rs  real_algebraic_field_bignum.rs  sylvester_determinant_diff.rs  sylvester_determinant_diff_bignum.rs
crates/axeyum-lean-import/: Cargo.toml
crates/axeyum-lean-import/examples/: lean4export_import.rs
crates/axeyum-lean-import/src/: identity.rs  lib.rs
crates/axeyum-lean-import/tests/: declaration_identity.rs  lean4export_v31.rs  official_construct_matrix.rs  official_mutual_inductive_groups.rs  official_nested_inductive_groups.rs  official_recursive_computation.rs  strict_positivity_propagation.rs  wire_mutation_corpus.rs
crates/axeyum-lean-kernel/: Cargo.toml
crates/axeyum-lean-kernel/examples/: prelude_axiom_inventory.rs
crates/axeyum-lean-kernel/src/: arith_prelude.rs  env.rs  expr.rs  inductive.rs  int_prelude.rs  lean_pp.rs  level.rs  lib.rs  name.rs  prelude.rs  quotient.rs  string_prelude.rs  tc.rs  tests.rs
crates/axeyum-lean-kernel/tests/: kernel_seam_fuzz.rs  mutual_inductive_group_grammar.rs  mutual_inductive_groups.rs  nat_literal_bignum.rs  nat_literal_semantics.rs  nested_inductive_elimination.rs  nested_inductive_grammar.rs  proj_representation.rs  projection_inference.rs  projection_reduction.rs  prop_large_elim_derives_false.rs  prop_large_elim_soundness.rs  real_lean_inductive_crosscheck.rs  real_lean_nat_literal_crosscheck.rs  real_lean_strict_positivity_crosscheck.rs  real_lean_structure_eta_crosscheck.rs  recursive_induction_hypotheses.rs  strict_positivity.rs  structure_eta.rs  zz_scratch_largeelim.rs
crates/axeyum-property/: Cargo.toml  README.md
crates/axeyum-property-derive/: Cargo.toml
crates/axeyum-property-derive/src/: lib.rs
crates/axeyum-property-macros/: Cargo.toml
crates/axeyum-property-macros/src/: lib.rs
crates/axeyum-property/examples/: property_corpus_scoreboard.rs
crates/axeyum-property/src/: array.rs  bounded.rs  ctx.rs  handle.rs  lib.rs  property.rs  reproduce.rs
crates/axeyum-property/tests/: corpus.rs  property.rs  v1_v2_features.rs  worked_examples.rs
crates/axeyum-query/: Cargo.toml  README.md
crates/axeyum-query/src/: lib.rs  planning.rs
crates/axeyum-rewrite/: Cargo.toml  README.md
crates/axeyum-rewrite/src/: arrays.rs  canonical.rs  datatypes.rs  elim_unconstrained.rs  functions.rs  int_blast.rs  int_divmod.rs  lib.rs  lower_bv.rs  propagate_values.rs  quantifiers.rs  reconstruct.rs  solve_eqs.rs
crates/axeyum-rewrite/tests/: datatypes.rs
crates/axeyum-scenarios/: Cargo.toml
crates/axeyum-scenarios/src/: algebra.rs  arithmetic.rs  concept.rs  counting.rs  coverage.rs  exercise.rs  functions.rs  identities.rs  induction.rs  integers.rs  lib.rs  linear_algebra.rs  logic.rs  machine.rs  mathtour.rs  memory.rs  (+14 more)
crates/axeyum-smtlib/: Cargo.toml
crates/axeyum-solver/: Cargo.toml  README.md
crates/axeyum-strings/: Cargo.toml
crates/axeyum-verify/: Cargo.toml  README.md
crates/axeyum-verify-macros/: Cargo.toml
crates/axeyum-wasm/: Cargo.toml
(+4610 files in other folders)
