[workspace]
resolver = "3"
members = [
    "crates/axeyum-ir",
    "crates/axeyum-smtlib",
    "crates/axeyum-solver",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mjbommar/axeyum"
authors = ["Michael Bommarito <mike@273ventures.com>"]
keywords = ["smt", "sat", "solver", "verification", "symbolic"]
categories = ["science", "mathematics"]

[workspace.dependencies]
axeyum-ir = { path = "crates/axeyum-ir", version = "0.1.0" }
z3 = { version = "0.20", default-features = false }

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Pedantic exceptions that fight the ID/arena style this project uses.
module_name_repetitions = "allow"
must_use_candidate = "allow"
