[workspace]
resolver = "3"
members = [
    "crates/axeyum-aig",
    "crates/axeyum-bench",
    "crates/axeyum-bv",
    "crates/axeyum-cas",
    "crates/axeyum-cnf",
    "crates/axeyum-egraph",
    "crates/axeyum-evm",
    "crates/axeyum-fp",
    "crates/axeyum-query",
    "crates/axeyum-ir",
    "crates/axeyum-lean-kernel",
    "crates/axeyum-property",
    "crates/axeyum-property-macros",
    "crates/axeyum-rewrite",
    "crates/axeyum-scenarios",
    "crates/axeyum-smtlib",
    "crates/axeyum-solver",
    "crates/axeyum-strings",
    "crates/axeyum-verify",
    "crates/axeyum-verify-macros",
    "crates/axeyum-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mjbommar/axeyum"
authors = ["Michael Bommarito <mike@273ventures.com>"]
keywords = ["smt", "sat", "solver", "verification", "symbolic"]
categories = ["science", "mathematics"]

[workspace.dependencies]
axeyum-aig = { path = "crates/axeyum-aig", version = "0.1.0" }
axeyum-bv = { path = "crates/axeyum-bv", version = "0.1.0" }
axeyum-cas = { path = "crates/axeyum-cas", version = "0.1.0" }
axeyum-cnf = { path = "crates/axeyum-cnf", version = "0.1.0" }
axeyum-egraph = { path = "crates/axeyum-egraph", version = "0.1.0" }
axeyum-fp = { path = "crates/axeyum-fp", version = "0.1.0" }
axeyum-ir = { path = "crates/axeyum-ir", version = "0.1.0" }
axeyum-query = { path = "crates/axeyum-query", version = "0.1.0" }
axeyum-scenarios = { path = "crates/axeyum-scenarios", version = "0.1.0" }
axeyum-strings = { path = "crates/axeyum-strings", version = "0.1.0" }
batsat = { version = "0.6.0" }
rustsat = { version = "0.7.5", default-features = false }
rustsat-batsat = { version = "0.7.5" }
proptest = { version = "1", default-features = false, features = ["std"] }
z3 = { version = "0.20", default-features = false }
# Browser-compatible monotonic clock; only used on wasm32 targets (ADR-0017).
web-time = { version = "1" }

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Pedantic exceptions that fight the ID/arena style this project uses.
module_name_repetitions = "allow"
must_use_candidate = "allow"
