[package]
name = "axeyum-aig"
description = "AIG circuit layer for Axeyum: deterministic structural hashing and evaluation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]

[lints]
workspace = true
