[package]
name = "axeyum-bench"
description = "Benchmark harness for the Axeyum reasoning stack: corpus runs, PAR-2 scoring, versioned results artifacts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
axeyum-cnf = { path = "../axeyum-cnf" }
axeyum-ir.workspace = true
axeyum-query.workspace = true
axeyum-rewrite = { path = "../axeyum-rewrite" }
axeyum-scenarios = { path = "../axeyum-scenarios" }
axeyum-smtlib = { path = "../axeyum-smtlib" }
axeyum-solver = { path = "../axeyum-solver" }
rayon = "1"
serde_json = "1"
sha2 = "0.11"

[features]
default = []
z3 = ["axeyum-solver/z3"]
z3-static = ["axeyum-solver/z3-static"]

[lints]
workspace = true

[dev-dependencies]
# For the `dump_dimacs` diagnostic example only (bit-blast a query to DIMACS so a
# reference SAT solver can probe whether the Timeout instances are SAT-search-bound).
axeyum-bv = { path = "../axeyum-bv" }
