[package]
name = "axeyum-cas"
description = "Proof-carrying computer algebra for Axeyum: symbolic transforms whose results are certified by lowering to the decidable IR core (ADR-0301)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
# The decidable core: exact `Rational` arithmetic and univariate polynomial
# algebra (`poly::rat_derivative`, ...) used as the trusted certifier. Pure Rust,
# WASM-safe. No solver dependency: Phase C0 certifies entirely via exact
# polynomial normal forms (the normal form *is* the witness).
axeyum-ir.workspace = true
# Exact bounded intermediates for small linear systems, moment composition,
# product-scalar cancellation, and concrete WZ base checking. Public CasExpr
# coefficients remain checked i128 rationals. These are the same pure-Rust
# bignum crates already used unconditionally by axeyum-ir.
num-bigint = { version = "0.4" }
num-rational = { version = "0.4", default-features = false, features = ["num-bigint"] }
num-traits = { version = "0.2" }

[lints]
workspace = true
