[package]
name = "axeyum-cnf"
description = "CNF layer for Axeyum: Tseitin encoding, DIMACS I/O, evaluation, and lift maps"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
axeyum-aig.workspace = true
batsat.workspace = true
rustsat.workspace = true
rustsat-batsat.workspace = true

# Browser-compatible monotonic clock for timeouts/telemetry (ADR-0017); only on
# wasm32, where `std::time::Instant` has no clock in the browser.
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time.workspace = true

[dev-dependencies]
axeyum-bv.workspace = true
axeyum-ir.workspace = true

[lints]
workspace = true
