[package]
name = "axeyum-fp"
description = "Floating-point (IEEE 754) bit-vector formula builders for Axeyum: classification, comparison, arithmetic, and conversions over the typed IR"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
axeyum-ir.workspace = true
num-bigint = "0.4"

[lints]
workspace = true

[dev-dependencies]
# Test-only IEEE 754 software-float oracle for validating the wide-format FP
# circuits (F128) against correctly-rounded reference arithmetic — there is no
# native f128 on stable Rust (ADR-0028). Dev-only: never in the runtime graph,
# so the default build stays C-free. License Apache-2.0 WITH LLVM-exception.
rustc_apfloat = "0.2.3"
