[package]
name = "axeyum-ir"
description = "Typed term IR for the Axeyum automated reasoning stack: sorts, terms, interning, and ground evaluation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]

[lints]
workspace = true
