[package]
name = "axeyum-ir"
description = "Typed term IR for the Axeyum automated reasoning stack: sorts, terms, interning, and ground evaluation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
# Arbitrary-precision integers/rationals used ONLY on the algebraic-number field-
# arithmetic retry path (intermediate resultant + squarefree + Sturm isolation),
# behind the optional `bignum` feature (OFF by default — keeps this crate a
# zero-C/C++, minimal-dependency leaf for non-NRA embedders). Pure Rust,
# MIT/Apache-2.0. See docs nra-cad-nlsat-plan.md step 2.
num-bigint = { version = "0.4", optional = true }
num-rational = { version = "0.4", optional = true, default-features = false, features = ["num-bigint"] }
num-integer = { version = "0.1", optional = true }
num-traits = { version = "0.2", optional = true }

[features]
default = []
# Enable arbitrary-precision retry on the algebraic field-arithmetic path.
bignum = ["dep:num-bigint", "dep:num-rational", "dep:num-integer", "dep:num-traits"]

[lints]
workspace = true
