[package]
name = "axeyum-ir"
description = "Typed term IR for the Axeyum automated reasoning stack: sorts, terms, interning, and ground evaluation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
# Arbitrary-precision integers/rationals backing `Value::RealAlgebraic`'s storage
# (defining polynomial + isolating interval) and the algebraic-number field-
# arithmetic primitives (resultant + squarefree + Sturm isolation), per ADR-0045.
# Unconditional deps: pure Rust, MIT/Apache-2.0, allowed by the no-C/C++ hard rule
# (`cargo deny` passes them). Algebraic values appear only in NRA witnesses (rare),
# so the always-bignum storage is fine; the core `Rational` type stays `i128`.
num-bigint = { version = "0.4" }
num-rational = { version = "0.4", default-features = false, features = ["num-bigint"] }
num-integer = { version = "0.1" }
num-traits = { version = "0.2" }

[lints]
workspace = true
