[package]
name = "axeyum-lean-kernel"
description = "In-tree Rust Lean kernel for Axeyum: lifetime-free interned Name/Level/Expr + de Bruijn ops (ADR-0036)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]

[lints]
workspace = true
