[package]
name = "axeyum-property-derive"
description = "Derive macro for axeyum-property: #[derive(Symbolic)] declares a fresh symbolic value per struct field and lifts a model back into the concrete struct"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full", "extra-traits"] }
quote.workspace = true
proc-macro2.workspace = true

[lints]
workspace = true
