[package]
name = "axeyum-smtlib"
description = "SMT-LIB 2 reader/writer for the Axeyum QF_BV slice: benchmark ingestion and sharing-preserving export"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
axeyum-fp.workspace = true
axeyum-ir.workspace = true
axeyum-strings.workspace = true

[dev-dependencies]
serde_json = "1"
sha2 = "0.11"

[lints]
workspace = true
