[package]
name = "axeyum-solver"
description = "Solver backend trait, results, models, and capabilities for the Axeyum automated reasoning stack"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
axeyum-ir.workspace = true
z3 = { workspace = true, optional = true }

[features]
# Native backends are feature-gated leaf dependencies; the default build has
# no C or C++ build requirement (ADR-0002).
default = []
# Z3 oracle backend linked against the system libz3 (found via pkg-config).
z3 = ["dep:z3"]
# Use a prebuilt static libz3 instead of the system library; hermetic for CI
# and machines without libz3-dev. Implies `z3`.
z3-static = ["z3", "z3/gh-release"]

[lints]
workspace = true

[dev-dependencies]
axeyum-smtlib = { path = "../axeyum-smtlib" }
