[package]
name = "axeyum-solver"
description = "Solver backend trait, results, models, and capabilities for the Axeyum automated reasoning stack"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
axeyum-aig.workspace = true
axeyum-bv.workspace = true
axeyum-cnf.workspace = true
axeyum-egraph.workspace = true
axeyum-fp.workspace = true
axeyum-ir = { workspace = true, features = ["bignum"] }
axeyum-lean-kernel = { path = "../axeyum-lean-kernel" }
axeyum-query.workspace = true
axeyum-rewrite = { path = "../axeyum-rewrite" }
axeyum-smtlib = { path = "../axeyum-smtlib" }
z3 = { workspace = true, optional = true }

# Browser-compatible monotonic clock for timeouts/telemetry (ADR-0017); only on
# wasm32, where `std::time::Instant` has no clock in the browser.
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time.workspace = true

[features]
# Native backends are feature-gated leaf dependencies; the default build has
# no C or C++ build requirement (ADR-0002).
default = []
# Z3 oracle backend linked against the system libz3 (found via pkg-config).
z3 = ["dep:z3"]
# Use a prebuilt static libz3 instead of the system library; hermetic for CI
# and machines without libz3-dev. Implies `z3`.
z3-static = ["z3", "z3/gh-release"]

[lints]
workspace = true

[dev-dependencies]
axeyum-scenarios = { path = "../axeyum-scenarios" }
