[package]
name = "axeyum-strings"
description = "Word-level string/sequence theory for Axeyum: the Phase-B normalization invariant (flatten/drop-ε/fuse/push-len) over the typed IR, feeding flat/normal forms (ADR-0053)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
axeyum-ir.workspace = true

[lints]
workspace = true
