# WebAssembly binding for the playground — run the Axeyum solver in the browser.
#
# The crate is a workspace member so host tests and the real wasm32 build stay
# under CI. To produce the browser bundle:
#   1. rustup target add wasm32-unknown-unknown
#   2. cargo install wasm-pack
#   3. wasm-pack build crates/axeyum-wasm --target web --out-dir ../../docs/playground/pkg
#
# The default solver build is pure Rust and wasm-compatible (ADR-0017), so this
# adds no C/C++ dependency.

[package]
name = "axeyum-wasm"
version = "0.1.0"
edition = "2024"
publish = false
description = "WebAssembly binding exposing Axeyum's QF_BV solver to the browser playground."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axeyum-smtlib = { path = "../axeyum-smtlib" }
axeyum-solver = { path = "../axeyum-solver", default-features = false, features = ["qfbv"] }
wasm-bindgen = "0.2"
